--- a/dramaj_websiteportfolio/style.css
+++ b/dramaj_websiteportfolio/style.css
@@ -13,29 +13,29 @@ body {
     height: 100%;
     z-index: -1;
     background-image: url('https://i.gifer.com/DuXi.gif');
-    /*background-color: rgb(197, 206, 173);*/
+    background-color: rgb(197, 206, 173);
     background-blend-mode: difference; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    opacity: 0.3;
+    opacity: 0.7;
   }
 
   h1 {
     font-family: "Arial";
-    color: white;
+    color: rgb(3, 0, 109);        
     font-size: 10em;
     text-align: center;
-    text-shadow: 5px 5px 20px #CCFF00;
+
   }
 
   #output {
       font-family: Arial;
       font-size: 2em;
-      color: white;
+      color: rgb(3, 0, 109);        
       text-align: center;
-      text-shadow: 5px 5px 15px #CCFF00
+      font-weight: bold;
   }
 
   .buttonLink_large a {
@@ -44,3 +44,20 @@ body {
       bor
       border-radius: 10px;
   }
+
+  button {
+    background-color: #CCFF00;
+    color:#CCFF00;
+    font-size: 2em;
+    text-decoration: none;
+    border-color: rgb(3, 0, 109);
+    border-radius: 10px;
+  }
+
+  button a {
+    text-decoration: none;
+    color:rgb(3, 0, 109);
+
+  }
+
+
