--- a/dramaj_websiteportfolio/style2.css
+++ b/dramaj_websiteportfolio/style2.css
@@ -54,3 +54,12 @@ a:hover {
     display: inline-flex;
 }
 
+#listlink {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
+    color: rgb(204, 255, 0);
+    border: 1px solid rgb(204, 255, 0);
+    border-radius: 20px;
+    padding: 2px;
+}
+
