--- a/dramaj_websiteportfolio/style.css
+++ b/dramaj_websiteportfolio/style.css
@@ -42,16 +42,28 @@ body {
 
   button {
     background-color: #CCFF00;
-    font-size: 2em;
+    font-size: 1.5em;
     border-radius: 10px;
     border: 2px solid rgb(3, 0, 109);
-    margin: 5px;
+    margin-top: 30px;
   }
 
   button a {
     text-decoration: none;
     color:rgb(3, 0, 109);
-    font-weight: 600;
+    font-weight: 450;
   }
+
+  .buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+    margin-bottom: 20px;
+  }
+
+  .buttons button {
+    margin: 0 10px;
+}
 
 
